# mnist-training-epon

./: .gitignore  ERA4_Session_5.ipynb  LICENSE  README.md  main.py  mnist-training-epon.ipynb  pyproject.toml
reports/: CNN Model_MNIST_20251003_104329.html  CNN Model_MNIST_20251003_111456.html  CNN Model_MNIST_20251003_112628.html  CNN Model_MNIST_20251003_115930.html  CNN Model_MNIST_20251003_164214.html  CNN Model_MNIST_20251003_171900.html  CNN Model_MNIST_20251003_172641.html  CNN Model_MNIST_20251003_201238.html  CNN Model_MNIST_20251003_204943.html  CNN Model_MNIST_20251003_210221.html  CNN Model_MNIST_20251003_213721.html  CNN Model_MNIST_20251003_214701.html  CNN Model_MNIST_20251003_215937.html  CNN Model_MNIST_20251003_220202.html  CNN Model_MNIST_20251003_220342.html  CNN Model_MNIST_20251003_221458.html  CNN Model_MNIST_20251003_235232.html  CNN Model_MNIST_20251004_001529.html
